# warp_minio_server

./: .gitignore  Cargo.toml  README.md  config.json  config.yaml
.github/workflows/: build.yml
src/: auth.rs  cache.rs  config.rs  main.rs  minio_parser.rs  r2d2_minio.rs
src/config/: default_config.rs  minio_config.rs  mod.rs  power_config.rs  redis_config.rs  warp_config.rs
src/minio/: minio_parser.rs  minio_pool.rs  mod.rs  r2d2_minio.rs
